// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anchor Component should render correctly and match snapshot 1`] = `
.c0 {
  opacity: 1;
}

<Title
  className="c0"
  inheritedStyles=""
>
  Sample
</Title>
`;

exports[`Anchor Component should render with styles correctly and match snapshot 1`] = `
.c0 {
  opacity: 1;
}

<h1
  className="c0"
>
  Sample
</h1>
`;
